# minesweeper2

./: CMakeLists.txt  README.md  board.cpp  board.h  displaystatus.h  gamelevel.h  gamestatus.h  lcdstopwatch.cpp  lcdstopwatch.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minesweeper2.cpp  point.cpp  point.h  resources.qrc  tile.cpp  tile.h
